# nvecs

./: .gitignore  Cargo.toml  LICENSE  perf.data
benches/: bench_addition.rs  bench_dot_product.rs  bench_elementwise_multiplication.rs  bench_mag.rs  bench_subtraction.rs
src/: add.rs  cross.rs  element_multiply.rs  lib.rs  mag.rs  mul.rs  runner.rs  sub.rs  test_macros.rs
